<resources>
    <string name="app_name">Pothole Alert </string>
    <string name="title_activity_maps">Map</string>
    <string name="lable_description">Description</string>
    <string name="hint_description">Description of the Report</string>
    <string name="lable_cat">Report-type</string>
    <string name="hint_type">Street</string>
    <string name="user_name">Username</string>
    <string name="user_id">User-ID</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="get_location">Get Location</string>
    <string name="image_type">Select Image Type</string>
    <string name="map_location">Get Map View</string>

    <string name="alertdialog_title">GPS Settings</string>
    <string name="alertdialog_settings">Settings</string>
    <string name="alertdialog_cancel">Cancel</string>
    <string name="alertdialog_message">GPS not Enabled. Do you want to enable now?</string>

    <string-array name="image_array">
        <item>png</item>
        <item>none</item>
    </string-array>

    <string name="button_photo">Take Photo</string>
    <string name="button_submit">Submit</string>
</resources>
